Added functionality to retrieve rewards for month and day. Some CSS changes for the displaying of the rewards and their headers. Changed HTML, the top menu now encludes the SETUP link. Got rid of the unnecessary Google link in the menu.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a id="link-2" href="#">Weather</a></li>
-                <li><a id="link-3" href="#">API</a></li>
-                <li><a id="link-4" href="#">Other</a></li>
-                <li><a id="link-5" href="#">Google</a></li>
+                <li><a id="link-3" href="#">Helium</a></li>
+                <li><a id="link-4" href="#">Setup</a></li>
             </ul>
         </div>
         <div id="content" class="content"></div>
