Removed the weather link (in a new branch)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="navbar">   
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a id="link-2" href="#">Weather</a></li>
+                <!-- <li><a id="link-2" href="#">Weather</a></li> -->
                 <li><a id="link-3" href="#">Helium</a></li>
                 <li><a id="link-4" href="#">Setup</a></li>
             </ul>
